--- a/adm/style/ar_settings.html
+++ b/adm/style/ar_settings.html
@@ -43,7 +43,7 @@
 	</dl>
 	<dl>
 		<dt>
-			<label for="toptentopics">{L_ACP_NUMBER}</label><br /><span>{L_ACP_NUMBER_DESC}</span>
+			<label for="toptentopics">{L_AR_TIME}</label><br /><span>{L_AR_TIME_DESC}</span>
 		</dt>
 		<dd>
 			<input type="number" class="number" name="ar_time" value="{AR_TIME}" />
